# slicer-forge

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.ar.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  slicer-selftest.yml
DicomForgeBatch/: CMakeLists.txt  DicomForgeBatch.py
DicomForgeBatch/Testing/Python/: CMakeLists.txt  ci_selftest.py  dicomforge_testdata.py
docs/: tutorial.md
extensions-index/: README.md  SlicerForge.json  forum-announcement.md
scripts/: gen-readme-i18n.py  install-desktop-icon.ps1  open-repo.ps1
